# mistral_nvim

./: .gitignore  Cargo.toml  DEV.md  DEV_fr.md  README.md  README_fr.md
code_modifier/: Cargo.toml
code_modifier/src/: group.rs  lib.rs  parser.rs  test_gen.md
code_modifier/src/langs/rust/: mod.rs
code_modifier/src/langs/rust/tests/: injections.rs  mod.rs  queries.rs
mistral_nvim_derive/: Cargo.toml
mistral_nvim_derive/src/: form.rs  function_parameters.rs  lib.rs  utils.rs
mistral_nvim_derive/src/serde_attrs/: ast.rs  attr.rs  case.rs  ctxt.rs  mod.rs  name.rs  symbol.rs
mistral_nvim_derive/src/serde_derive_internal/internals/: ast.rs  attr.rs  case.rs  check.rs  ctxt.rs  mod.rs  name.rs  receiver.rs  respan.rs  symbol.rs
mistral_nvim_derive/tests/: integration_test.rs
src/: lib.rs  messages.rs
src/mistral/: client.rs  mod.rs
src/mistral/controlleur/: fim.rs
src/mistral/model/: completion.rs  message.rs  mod.rs  stream.rs  tools.rs
src/nvim/: mod.rs
src/nvim/controlleur/: chat.rs  fim.rs  latex.rs  mod.rs
src/nvim/controlleur/chat/: code_block_paste.rs
src/nvim/controlleur/form/: mod.rs  row_col.rs  tabs.rs
src/nvim/model/: buffer.rs  mod.rs  undotree.rs
src/nvim/model/cursor/: mod.rs  nvim_range.rs  nvim_range_v2.rs  range_impl.rs  usize_impl.rs
src/nvim/model/state/: buffer_modifier.rs  chat.rs  mod.rs
src/nvim/model/state/chat/: bar.rs  highlight.rs  parser.rs
src/nvim/model/tool_mode/: cargo_check.rs  code_refactorisation.rs  mod.rs
src/nvim/vue/: chat.rs  fim.rs  mod.rs
src/utils/: logger.rs  mod.rs  notify.rs  tool_id.rs
tests_files/: main.rs
