[package]
name = "mistral"
version = "0.1.0"
edition = "2024"

[features]
prod_mode = []
no_logs = []
log_trace = []

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi.git", rev = "d411003cbe660cd32014806b2d1a04651b7d06e0", features = ["libuv", "neovim-0-12", "test"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
uuid = { version = "1.0", features = ["v4"] }
mistral_nvim_derive = { path = "mistral_nvim_derive/" }
code_modifier = { path = "code_modifier/" }
ron = "0.11"
schemars = "1.1"
gix = { version = "0.76.0", default-features = false, features = ["index", "worktree-stream"] }

[build-dependencies]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi.git", rev = "d411003cbe660cd32014806b2d1a04651b7d06e0", features = ["libuv", "neovim-0-12", "test"] }

[dev-dependencies]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi.git", rev = "d411003cbe660cd32014806b2d1a04651b7d06e0", features = ["libuv", "neovim-0-12", "test"] }
schemars = { version = "1.1", features = ["preserve_order"] }
